--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,12 @@ body {
 }
 
 .app {
-  width: 90%;
-  max-width: 43rem;
-  padding: 1rem;
+  width: 100%;
+  /* max-width: 43rem; */
+  /* padding: 0px 12px; */
   border-radius: 12px;
   background-color: white;
-  margin: 3rem auto;
+  margin: 0px 0px 12px;
 }
 
 .form-control {
